# lago-paddle-classic-integration

./: Dockerfile  FLOW0_DOCUMENTATION.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  worker.py
app/api/: setup.py  status_api.py
app/clients/: lago.py  paddle_classic.py
app/flows/: customer_onboarding.py  invoice_payment.py
app/models/: lago.py
app/static/: setup.html  status.html
app/tasks/: customer_onboarding.py  invoice_payment.py
app/utils/: config_store.py  logger.py
app/webhooks/: lago.py  paddle.py
app/webhooks/verify/: lago.py  paddle.py
